--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="main_div">
-    <b><h1 style="text-align:center">웹사이트 V.2</h1></b>
+    <img src="UNKNOWN.jpeg">
     <hr>
     </br>
     <table class="main_table"style="float:right;">
