--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="main_div">
-    <img src="B4A67995-738D-4CCD-87AD-0CEA80F4C6DC.jpeg">
+      <h1>DongSite</h1>
     <hr>
     </br>
     <table class="main_table"style="float:right;">
