--- a/hamburger.html
+++ b/hamburger.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=0.5"> -->
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="main_div">
-    <canvas id="canvas"></canvas>
     <script src="main.js"></script>
-    </div>
-  </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <body bgcolor="d4eecc"></body>
+   <canvas id="canvas">   </canvas>
+</body>
 </html>
